# tibber_subscribe

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tibber_query.graphql
.github/workflows/: docker-image-latest.yml  docker-image-release.yml
src/: main.rs
src/v1/: mod.rs  run.rs  tibber.rs
